--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
   padding: 0;
   background: lightgoldenrodyellow;
 }
+.content {
+  min-height: calc(100vh - 130px);
+}
 .paper {
   position: absolute;
   height: 600px;
@@ -56,4 +59,8 @@ body {
 }
 .hole-bottom {
   bottom: 10%;
+}
+footer {
+  height: 50px;
+  margin-top: -50px;
 }
